--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 python-telegram-bot==20.4
-openai==1.45.0
+openai==1.81.0
 aiohttp==3.9.3
 beautifulsoup4==4.12.2
 numpy==1.24.3
 faiss-cpu==1.7.4
 python-dotenv==1.0.1
 playwright==1.48.0
+python-dotenv
