--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aiohttp==3.9.3
 beautifulsoup4==4.12.2
 faiss-cpu==1.7.4
 numpy==1.24.3
-openai==1.45.0
+openai
 playwright==1.48.0
-python-dotenv==1.0.1
-python-telegram-bot==20.4
+python-dotenv
+python-telegram-bot==20.3
