--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,8 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.18
-aiosignal==1.3.2
-annotated-types==0.7.0
-anyio==4.9.0
-async-timeout==5.0.1
-attrs==25.3.0
-beautifulsoup4==4.13.4
-certifi==2025.4.26
-charset-normalizer==3.4.2
-colorama==0.4.6
-distro==1.9.0
-exceptiongroup==1.3.0
-frozenlist==1.6.0
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-idna==3.10
-jiter==0.10.0
-multidict==6.4.4
-openai==0.28.0
-propcache==0.3.1
-pydantic==2.11.4
-pydantic_core==2.33.2
-python-dotenv==1.1.0
-python-telegram-bot==22.1
-requests==2.32.3
-sniffio==1.3.1
-soupsieve==2.7
-tqdm==4.67.1
-typing-inspection==0.4.1
-typing_extensions==4.13.2
-tzdata==2025.2
-urllib3==2.4.0
-yarl==1.20.0
-playwright
+aiofiles==23.2.1
+aiohttp==3.9.1
+openai==1.3.7
+psutil==5.9.6
+python-dotenv==1.0.0
+python-telegram-bot==20.7
+telegram==0.0.1
+trafilatura==1.6.4
